--- a/MessangerApp/Info.plist
+++ b/MessangerApp/Info.plist
@@ -26,6 +26,14 @@
 				<string>com.googleusercontent.apps.889418595557-4ipdm4q8cr25l9b0530r2vv6r6gpq3ab</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>889418595557-4ipdm4q8cr25l9b0530r2vv6r6gpq3ab.apps.googleusercontent.com</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
@@ -77,5 +85,38 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb423599612728024</string>
+      </array>
+      </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>423599612728024</string>
+    <key>FacebookClientToken</key>
+    <string>d531beab0221fe84b714b38ac005f86c</string>
+    <key>FacebookDisplayName</key>
+    <string>MessangerApp</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fbapi</string>
+      <string>fbapi20130214</string>
+      <string>fbapi20130410</string>
+      <string>fbapi20130702</string>
+      <string>fbapi20131010</string>
+      <string>fbapi20131219</string>
+      <string>fbapi20140410</string>
+      <string>fbapi20140116</string>
+      <string>fbapi20150313</string>
+      <string>fbapi20150629</string>
+      <string>fbapi20160328</string>
+      <string>fbauth</string>
+      <string>fb-messenger-share-api</string>
+      <string>fbauth2</string>
+      <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
